create generate article api

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 DATABASE_URL= 'postgresql://neondb_owner:npg_5sdeEpWoU7SP@ep-rough-wave-adujshmj-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 CLERK_PUBLISHABLE_KEY=pk_test_YWNjZXB0ZWQtY3Jvdy0xNi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_RYTX9eD5EixaWz6sa1BDcuU1h3C9ketjnGtIYgWajW
+
+
+GEMINI_API_KEY=AIzaSyC94sQN-bfghxcj3Hy6C4d3w1zC1Y2g_lw
